--- a/app/globals.css
+++ b/app/globals.css
@@ -21,8 +21,10 @@
 html {
   scrollbar-gutter: stable;
   scrollbar-width: thin;
+  overscroll-behavior: none;
 }
 body {
+  overscroll-behavior: none;
 }
 
 @layer components {
